@@ -19,9 +19,10 @@
 package org.apache.cassandra.utils;
 
 import java.nio.ByteBuffer;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -32,21 +33,24 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.function.BiConsumer;
+import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 
-import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
+import org.apache.commons.lang3.ArrayUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import org.apache.cassandra.cql3.ColumnIdentifier;
+import org.apache.cassandra.cql3.Duration;
 import org.apache.cassandra.cql3.FieldIdentifier;
 import org.apache.cassandra.db.marshal.AbstractCompositeType;
 import org.apache.cassandra.db.marshal.AbstractType;
@@ -79,6 +83,7 @@ import org.apache.cassandra.db.marshal.ReversedType;
 import org.apache.cassandra.db.marshal.SetType;
 import org.apache.cassandra.db.marshal.ShortType;
 import org.apache.cassandra.db.marshal.SimpleDateType;
+import org.apache.cassandra.db.marshal.StringType;
 import org.apache.cassandra.db.marshal.TimeType;
 import org.apache.cassandra.db.marshal.TimeUUIDType;
 import org.apache.cassandra.db.marshal.TimestampType;
@@ -87,16 +92,18 @@ import org.apache.cassandra.db.marshal.TypeParser;
 import org.apache.cassandra.db.marshal.UTF8Type;
 import org.apache.cassandra.db.marshal.UUIDType;
 import org.apache.cassandra.db.marshal.UserType;
-import org.apache.cassandra.db.marshal.ValueAccessor;
+import org.apache.cassandra.db.marshal.VectorType;
 import org.apache.cassandra.serializers.MarshalException;
 import org.quicktheories.core.Gen;
 import org.quicktheories.core.RandomnessSource;
 import org.quicktheories.generators.SourceDSL;
 import org.quicktheories.impl.JavaRandom;
 
+import static org.apache.cassandra.utils.AbstractTypeGenerators.TypeKind.COUNTER;
 import static org.apache.cassandra.utils.Generators.IDENTIFIER_GEN;
+import static org.apache.cassandra.utils.Generators.filter;
 
-@SuppressWarnings({ "unchecked", "rawtypes" })
+@SuppressWarnings({"unchecked", "rawtypes"})
 public final class AbstractTypeGenerators
 {
     private final static Logger logger = LoggerFactory.getLogger(AbstractTypeGenerators.class);
@@ -104,8 +111,6 @@ public final class AbstractTypeGenerators
     private static final Gen<Integer> VERY_SMALL_POSITIVE_SIZE_GEN = SourceDSL.integers().between(1, 3);
     private static final Gen<Boolean> BOOLEAN_GEN = SourceDSL.booleans().all();
 
-
-    @SuppressWarnings("RedundantCast")
     public static final Map<Class<? extends AbstractType<?>>, String> UNSUPPORTED = ImmutableMap.<Class<? extends AbstractType<?>>, String>builder()
                                                                                                 .put(DateType.class, "Says its CQL type is timestamp, but that maps to TimestampType; is this actually dead code at this point?")
                                                                                                 .put(LegacyTimeUUIDType.class, "Says its CQL timeuuid type, but that maps to TimeUUIDType; is this actually dead code at this point?")
@@ -116,7 +121,22 @@ public final class AbstractTypeGenerators
                                                                                                 .put(FrozenType.class, "Fake class only used during parsing... the parsing creates this and the real type under it, then this gets swapped for the real type")
                                                                                                 .build();
 
-    public static final Map<AbstractType<?>, TypeSupport<?>> PRIMITIVE_TYPE_DATA_GENS =
+    /**
+     * Java does a char by char compare, but Cassandra does a byte ordered compare.  This mostly overlaps but some cases
+     * where chars are mixed between 1 and 2 bytes, you can get a different ordering than java's.  One argument in favor
+     * of this is that byte order is far faster than char order, which only violates a few cases but not the general case:
+     * {@code "David" > "david"}.  Without more research, it also isn't clear if this at all violates any UTF-8 spec (wikipedia
+     * mentions "sorting the corresponding byte sequences").
+     *
+     * @see <a href="https://the-asf.slack.com/archives/CK23JSY2K/p1684257304714649">Slack</a>
+     */
+    public static Comparator<String> stringComparator(StringType st)
+    {
+        return (String a, String b) -> FastByteOperations.compareUnsigned(st.decompose(a), st.decompose(b));
+    }
+
+
+    private static final Map<AbstractType<?>, TypeSupport<?>> PRIMITIVE_TYPE_DATA_GENS =
     Stream.of(TypeSupport.of(BooleanType.instance, BOOLEAN_GEN),
               TypeSupport.of(ByteType.instance, SourceDSL.integers().between(0, Byte.MAX_VALUE * 2 + 1).map(Integer::byteValue)),
               TypeSupport.of(ShortType.instance, SourceDSL.integers().between(0, Short.MAX_VALUE * 2 + 1).map(Integer::shortValue)),
@@ -124,25 +144,33 @@ public final class AbstractTypeGenerators
               TypeSupport.of(LongType.instance, SourceDSL.longs().all()),
               TypeSupport.of(FloatType.instance, SourceDSL.floats().any()),
               TypeSupport.of(DoubleType.instance, SourceDSL.doubles().any()),
-              TypeSupport.of(BytesType.instance, Generators.bytes(1, 1024)),
+              TypeSupport.of(BytesType.instance, Generators.bytes(0, 1024), FastByteOperations::compareUnsigned), // use the faster version...
               TypeSupport.of(UUIDType.instance, Generators.UUID_RANDOM_GEN),
               TypeSupport.of(TimeUUIDType.instance, Generators.UUID_TIME_GEN.map(TimeUUID::fromUuid)),
               TypeSupport.of(LexicalUUIDType.instance, Generators.UUID_RANDOM_GEN.mix(Generators.UUID_TIME_GEN)),
-              TypeSupport.of(InetAddressType.instance, Generators.INET_ADDRESS_UNRESOLVED_GEN), // serialization strips the hostname, only keeps the address
-              TypeSupport.of(AsciiType.instance, SourceDSL.strings().ascii().ofLengthBetween(1, 1024)),
-              TypeSupport.of(UTF8Type.instance, Generators.utf8(1, 1024)),
+              TypeSupport.of(InetAddressType.instance, Generators.INET_ADDRESS_UNRESOLVED_GEN, (a, b) -> FastByteOperations.compareUnsigned(a.getAddress(), b.getAddress())), // serialization strips the hostname, only keeps the address
+              TypeSupport.of(AsciiType.instance, SourceDSL.strings().ascii().ofLengthBetween(0, 1024), stringComparator(AsciiType.instance)),
+              TypeSupport.of(UTF8Type.instance, Generators.utf8(0, 1024), stringComparator(UTF8Type.instance)),
               TypeSupport.of(TimestampType.instance, Generators.DATE_GEN),
               TypeSupport.of(SimpleDateType.instance, SourceDSL.integers().between(0, Integer.MAX_VALUE)), // can't use time gen as this is an int, and in Milliseconds... so overflows...
               TypeSupport.of(TimeType.instance, SourceDSL.longs().between(0, 24L * 60L * 60L * 1_000_000_000L - 1L)),
               // null is desired here as #decompose will call org.apache.cassandra.serializers.EmptySerializer.serialize which ignores the input and returns empty bytes
-              TypeSupport.of(EmptyType.instance, rnd -> null),
-              TypeSupport.of(DurationType.instance, CassandraGenerators.duration()),
+              TypeSupport.of(EmptyType.instance, rnd -> null, (a, b) -> 0),
+              TypeSupport.of(DurationType.instance, CassandraGenerators.duration(), Comparator.comparingInt(Duration::getMonths)
+                                                                                              .thenComparingInt(Duration::getDays)
+                                                                                              .thenComparingLong(Duration::getNanoseconds)),
               TypeSupport.of(IntegerType.instance, Generators.bigInt()),
               TypeSupport.of(DecimalType.instance, Generators.bigDecimal())
     ).collect(Collectors.toMap(t -> t.type, t -> t));
     // NOTE not supporting reversed as CQL doesn't allow nested reversed types
     // when generating part of the clustering key, it would be good to allow reversed types as the top level
-    private static final Gen<AbstractType<?>> PRIMITIVE_TYPE_GEN = SourceDSL.arbitrary().pick(new ArrayList<>(PRIMITIVE_TYPE_DATA_GENS.keySet()));
+    private static final Gen<AbstractType<?>> PRIMITIVE_TYPE_GEN;
+    static
+    {
+        ArrayList<AbstractType<?>> types = new ArrayList<>(PRIMITIVE_TYPE_DATA_GENS.keySet());
+        types.sort(Comparator.comparing(a -> a.getClass().getName()));
+        PRIMITIVE_TYPE_GEN = SourceDSL.arbitrary().pick(types);
+    }
 
     private static final Set<Class<? extends AbstractType>> NON_PRIMITIVE_TYPES = ImmutableSet.<Class<? extends AbstractType>>builder()
                                                                                               .add(SetType.class)
@@ -150,6 +178,7 @@ public final class AbstractTypeGenerators
                                                                                               .add(MapType.class)
                                                                                               .add(TupleType.class)
                                                                                               .add(UserType.class)
+                                                                                              .add(VectorType.class)
                                                                                               .add(CompositeType.class)
                                                                                               .add(DynamicCompositeType.class)
                                                                                               .add(CounterColumnType.class)
@@ -165,11 +194,12 @@ public final class AbstractTypeGenerators
         PRIMITIVE,
         SET, LIST, MAP,
         TUPLE, UDT,
+        VECTOR,
         COMPOSITE, DYNAMIC_COMPOSITE,
         COUNTER
     }
 
-    private static final Gen<TypeKind> TYPE_KIND_GEN = SourceDSL.arbitrary().pick(ImmutableList.copyOf(EnumSet.complementOf(EnumSet.of(TypeKind.COUNTER))));
+    private static final Gen<TypeKind> TYPE_KIND_GEN = SourceDSL.arbitrary().enumValuesWithNoOrder(TypeKind.class);
 
     public static Set<Class<? extends AbstractType>> knownTypes()
     {
@@ -199,13 +229,316 @@ public final class AbstractTypeGenerators
         return PRIMITIVE_TYPE_GEN;
     }
 
-    public static Gen<AbstractType<?>> primitiveTypeGen(AbstractType<?>... without)
+    public static Set<Class<? extends AbstractType<?>>> UNSAFE_EQUALITY = ImmutableSet.of(EmptyType.class,
+                                                                                          DurationType.class,
+                                                                                          DecimalType.class,
+                                                                                          CounterColumnType.class);
+
+    public static <T> Releaser overridePrimitiveTypeSupport(AbstractType<T> type, TypeSupport<T> support)
     {
-        List<AbstractType<?>> types = new ArrayList<>(PRIMITIVE_TYPE_DATA_GENS.keySet());
-        for (AbstractType<?> t : without)
-            types.remove(t);
-        return SourceDSL.arbitrary().pick(types);
+        if (!PRIMITIVE_TYPE_DATA_GENS.containsKey(type))
+            throw new IllegalArgumentException("Type " + type.asCQL3Type() + " is not a primitive");
+        TypeSupport<?> original = PRIMITIVE_TYPE_DATA_GENS.get(type);
+        PRIMITIVE_TYPE_DATA_GENS.put(type, support);
+        return () -> PRIMITIVE_TYPE_DATA_GENS.put(type, original);
     }
+
+    public static TypeGenBuilder withoutUnsafeEquality()
+    {
+        // make sure to keep UNSAFE_EQUALITY in-sync
+        return AbstractTypeGenerators.builder()
+                                     .withoutEmpty()
+                                     .withoutPrimitive(DurationType.instance)
+                                     // decimal "normalizes" the data to compare, so primary columns "may" mutate the data, causing missmatches
+                                     // see CASSANDRA-18530
+                                     .withoutPrimitive(DecimalType.instance)
+                                     // counters are only for top level
+                                     .withoutTypeKinds(TypeKind.COUNTER);
+    }
+
+    public interface Releaser extends AutoCloseable
+    {
+        @Override
+        void close();
+    }
+
+    public static class TypeGenBuilder
+    {
+        private int maxDepth = 3;
+        private EnumSet<TypeKind> kinds;
+        private Gen<TypeKind> typeKindGen;
+        private Gen<Integer> defaultSizeGen = VERY_SMALL_POSITIVE_SIZE_GEN;
+        private Gen<Integer> vectorSizeGen, tupleSizeGen, udtSizeGen, compositeSizeGen;
+        private Gen<AbstractType<?>> primitiveGen = PRIMITIVE_TYPE_GEN, compositeElementGen;
+        private Gen<String> userTypeKeyspaceGen = IDENTIFIER_GEN;
+        private Function<Integer, Gen<AbstractType<?>>> defaultSetKeyFunc;
+        private Predicate<AbstractType<?>> typeFilter = null;
+        private Gen<String> udtName = null;
+
+        public TypeGenBuilder()
+        {
+        }
+
+        public TypeGenBuilder(TypeGenBuilder other)
+        {
+            maxDepth = other.maxDepth;
+            kinds = other.kinds == null ? null : EnumSet.copyOf(other.kinds);
+            typeKindGen = other.typeKindGen;
+            defaultSizeGen = other.defaultSizeGen;
+            vectorSizeGen = other.vectorSizeGen;
+            tupleSizeGen = other.tupleSizeGen;
+            udtName = other.udtName;
+            udtSizeGen = other.udtSizeGen;
+            primitiveGen = other.primitiveGen;
+            userTypeKeyspaceGen = other.userTypeKeyspaceGen;
+            defaultSetKeyFunc = other.defaultSetKeyFunc;
+            compositeElementGen = other.compositeElementGen;
+            compositeSizeGen = other.compositeSizeGen;
+            typeFilter = other.typeFilter;
+        }
+
+        public TypeGenBuilder withTypeFilter(Predicate<AbstractType<?>> fn)
+        {
+            typeFilter = fn;
+            return this;
+        }
+
+        public TypeGenBuilder withCompositeElementGen(Gen<AbstractType<?>> gen)
+        {
+            this.compositeElementGen = gen;
+            return this;
+        }
+
+        @SuppressWarnings("unused")
+        public TypeGenBuilder withDefaultSetKey(Function<Integer, Gen<AbstractType<?>>> mapKeyFunc)
+        {
+            this.defaultSetKeyFunc = mapKeyFunc;
+            return this;
+        }
+
+        public TypeGenBuilder withDefaultSetKey(TypeGenBuilder builder)
+        {
+            this.defaultSetKeyFunc = builder::buildRecursive;
+            return this;
+        }
+
+        public TypeGenBuilder withUserTypeKeyspace(String keyspace)
+        {
+            userTypeKeyspaceGen = SourceDSL.arbitrary().constant(keyspace);
+            return this;
+        }
+
+        public TypeGenBuilder withDefaultSizeGen(int size)
+        {
+            return withDefaultSizeGen(SourceDSL.arbitrary().constant(size));
+        }
+
+        public TypeGenBuilder withDefaultSizeGen(Gen<Integer> sizeGen)
+        {
+            this.defaultSizeGen = sizeGen;
+            return this;
+        }
+
+        @SuppressWarnings("unused")
+        public TypeGenBuilder withVectorSizeGen(Gen<Integer> sizeGen)
+        {
+            this.vectorSizeGen = sizeGen;
+            return this;
+        }
+
+        @SuppressWarnings("unused")
+        public TypeGenBuilder withTupleSizeGen(Gen<Integer> sizeGen)
+        {
+            this.tupleSizeGen = sizeGen;
+            return this;
+        }
+
+        @SuppressWarnings("unused")
+        public TypeGenBuilder withUDTSizeGen(Gen<Integer> sizeGen)
+        {
+            this.udtSizeGen = sizeGen;
+            return this;
+        }
+
+        @SuppressWarnings("unused")
+        public TypeGenBuilder withCompositeSizeGen(Gen<Integer> sizeGen)
+        {
+            this.compositeSizeGen = sizeGen;
+            return this;
+        }
+
+        public TypeGenBuilder withoutEmpty()
+        {
+            return withoutPrimitive(EmptyType.instance);
+        }
+
+        public TypeGenBuilder withoutPrimitive(AbstractType<?> instance)
+        {
+            if (!PRIMITIVE_TYPE_DATA_GENS.containsKey(instance))
+                throw new IllegalArgumentException("Type " + instance + " is not a primitive type, or PRIMITIVE_TYPE_DATA_GENS needs to add support");
+            primitiveGen = filter(primitiveGen, t -> t != instance);
+            return this;
+        }
+
+        @SuppressWarnings("unused")
+        public TypeGenBuilder withPrimitives(AbstractType<?> first, AbstractType<?>... remaining)
+        {
+            // any previous filters will be ignored...
+            primitiveGen = SourceDSL.arbitrary().pick(ArrayUtils.add(remaining, first));
+            return this;
+        }
+
+        public TypeGenBuilder withMaxDepth(int value)
+        {
+            this.maxDepth = value;
+            return this;
+        }
+
+        public TypeGenBuilder withoutTypeKinds(TypeKind... values)
+        {
+            checkTypeKindValues();
+            for (TypeKind kind : values)
+                kinds.remove(kind);
+            return this;
+        }
+
+        public TypeGenBuilder withTypeKinds(TypeKind... values)
+        {
+            checkTypeKindValues();
+            kinds.clear();
+            Collections.addAll(kinds, values);
+            return this;
+        }
+
+        private void checkTypeKindValues()
+        {
+            if (typeKindGen != null)
+                throw new IllegalArgumentException("Mixed both generator and individaul values for type kind");
+            if (kinds == null)
+                kinds = EnumSet.allOf(TypeKind.class);
+        }
+
+        public TypeGenBuilder withTypeKinds(Gen<TypeKind> typeKindGen)
+        {
+            if (kinds != null)
+                throw new IllegalArgumentException("Mixed both generator and individaul values for type kind");
+            this.typeKindGen = Objects.requireNonNull(typeKindGen);
+            return this;
+        }
+
+        public TypeGenBuilder withUDTNames(Gen<String> udtName)
+        {
+            this.udtName = udtName;
+            return this;
+        }
+
+        public Gen<AbstractType<?>> build()
+        {
+            if (udtName == null)
+                udtName = Generators.unique(IDENTIFIER_GEN);
+            // strip out the package to make it easier to read
+            // type parser assumes this package when one isn't provided, so this does not corrupt the type conversion
+            return buildRecursive(maxDepth).describedAs(t -> t.asCQL3Type().toString().replaceAll("org.apache.cassandra.db.marshal.", ""));
+        }
+
+        private Gen<AbstractType<?>> buildRecursive(int maxDepth)
+        {
+            if (udtName == null)
+                udtName = Generators.unique(IDENTIFIER_GEN);
+            Gen<TypeKind> kindGen;
+            if (typeKindGen != null)
+                kindGen = typeKindGen;
+            else if (kinds != null)
+            {
+                ArrayList<TypeKind> ts = new ArrayList<>(kinds);
+                Collections.sort(ts);
+                kindGen = SourceDSL.arbitrary().pick(ts);
+            }
+            else
+                kindGen = SourceDSL.arbitrary().enumValues(TypeKind.class);
+            return buildRecursive(maxDepth, maxDepth, kindGen, BOOLEAN_GEN);
+        }
+
+        private Gen<AbstractType<?>> buildRecursive(int maxDepth, int level, Gen<TypeKind> typeKindGen, Gen<Boolean> multiCellGen)
+        {
+            if (level == -1)
+                return primitiveGen;
+            assert level >= 0 : "max depth must be positive or zero; given " + level;
+            boolean atBottom = level == 0;
+            boolean atTop = maxDepth == level;
+            Gen<AbstractType<?>> gen = rnd -> {
+                Supplier<Gen<AbstractType<?>>> next = () -> atBottom ? primitiveGen : buildRecursive(maxDepth, level - 1, typeKindGen, multiCellGen);
+
+                // figure out type to get
+                TypeKind kind = typeKindGen.generate(rnd);
+                // counters are only allowed at the top level
+                while (!atTop && kind == TypeKind.COUNTER)
+                    kind = typeKindGen.generate(rnd);
+                switch (kind)
+                {
+                    case PRIMITIVE:
+                        return primitiveGen.generate(rnd);
+                    case SET:
+                        if (defaultSetKeyFunc != null)
+                            return setTypeGen(defaultSetKeyFunc.apply(level - 1), multiCellGen).generate(rnd);
+                        return setTypeGen(next.get(), multiCellGen).generate(rnd);
+                    case LIST:
+                        return listTypeGen(next.get(), multiCellGen).generate(rnd);
+                    case MAP:
+                        if (defaultSetKeyFunc != null)
+                            return mapTypeGen(defaultSetKeyFunc.apply(level - 1), next.get(), multiCellGen).generate(rnd);
+                        return mapTypeGen(next.get(), next.get(), multiCellGen).generate(rnd);
+                    case TUPLE:
+                        return tupleTypeGen(atBottom ? primitiveGen : buildRecursive(maxDepth, level - 1, typeKindGen, SourceDSL.arbitrary().constant(false)), tupleSizeGen != null ? tupleSizeGen : defaultSizeGen).generate(rnd);
+                    case UDT:
+                        return userTypeGen(next.get(), udtSizeGen != null ? udtSizeGen : defaultSizeGen, userTypeKeyspaceGen, udtName, multiCellGen).generate(rnd);
+                    case VECTOR:
+                    {
+                        Gen<Integer> sizeGen = vectorSizeGen != null ? vectorSizeGen : defaultSizeGen;
+                        return vectorTypeGen(next.get().map(AbstractType::freeze), sizeGen).generate(rnd);
+                    }
+                    case COMPOSITE:
+                        return compositeTypeGen(compositeElementGen != null ? compositeElementGen : next.get(), compositeSizeGen != null ? compositeSizeGen : defaultSizeGen).generate(rnd);
+                    case DYNAMIC_COMPOSITE:
+                        Gen<Byte> aliasGen = Generators.letterOrDigit().map(c -> (byte) c.charValue());
+                        // stores alias names by class and not what is actually valid by cql... so only primitive types match!
+                        return dynamicCompositeGen(primitiveGen, aliasGen, defaultSizeGen).generate(rnd);
+                    case COUNTER:
+                        return CounterColumnType.instance;
+                    default:
+                        throw new IllegalArgumentException("Unknown kind: " + kind);
+                }
+            };
+            return typeFilter == null ? gen : filter(gen, typeFilter);
+        }
+    }
+
+    public static TypeGenBuilder builder()
+    {
+        return new TypeGenBuilder();
+    }
+
+    /**
+     * Similar to {@link #typeGen()} but removes types that are known to be problematic in some cases and limits the depth
+     * of the type tree to avoid cell constratins.
+     */
+    public static Gen<AbstractType<?>> safeTypeGen()
+    {
+        TypeGenBuilder baseline = AbstractTypeGenerators.builder()
+                                                        // neither of these types support the property
+                                                        //   expected == fromComparableBytes(asComparableBytes(expected))
+                                                        // so rather than having tests try to skip... just avoid those types!
+                                                        .withoutEmpty()
+                                                        .withoutTypeKinds(COUNTER)
+                                                        .withoutPrimitive(DecimalType.instance)
+                                                        // its ordering is special...
+                                                        .withoutPrimitive(DurationType.instance);
+        // composite requires all elements fit into Short.MAX_VALUE bytes
+        // so try to limit the possible expansion of types
+        return baseline.withCompositeElementGen(new TypeGenBuilder(baseline).withDefaultSizeGen(1).withMaxDepth(1).build())
+                       .build();
+    }
+
     public static Gen<AbstractType<?>> typeGen()
     {
         return typeGen(3);
@@ -218,36 +551,29 @@ public final class AbstractTypeGenerators
 
     public static Gen<AbstractType<?>> typeGen(int maxDepth, Gen<TypeKind> typeKindGen, Gen<Integer> sizeGen)
     {
-        assert maxDepth >= 0 : "max depth must be positive or zero; given " + maxDepth;
-        boolean atBottom = maxDepth == 0;
+        return builder().withMaxDepth(maxDepth).withTypeKinds(typeKindGen).withDefaultSizeGen(sizeGen).build();
+    }
+
+    @SuppressWarnings("unused")
+    public static Gen<VectorType<?>> vectorTypeGen()
+    {
+        return vectorTypeGen(typeGen(2)); // lower the default depth since this is already a nested type
+    }
+
+    public static Gen<VectorType<?>> vectorTypeGen(Gen<AbstractType<?>> typeGen)
+    {
+        return vectorTypeGen(typeGen, SourceDSL.integers().between(1, 100));
+    }
+
+    public static Gen<VectorType<?>> vectorTypeGen(Gen<AbstractType<?>> typeGen, Gen<Integer> dimensionGen)
+    {
         return rnd -> {
-            // figure out type to get
-            TypeKind kind = typeKindGen.generate(rnd);
-            switch (kind)
-            {
-                case PRIMITIVE:
-                    return PRIMITIVE_TYPE_GEN.generate(rnd);
-                case SET:
-                    return setTypeGen(atBottom ? PRIMITIVE_TYPE_GEN : typeGen(maxDepth - 1, typeKindGen, sizeGen)).generate(rnd);
-                case LIST:
-                    return listTypeGen(atBottom ? PRIMITIVE_TYPE_GEN : typeGen(maxDepth - 1, typeKindGen, sizeGen)).generate(rnd);
-                case MAP:
-                    return mapTypeGen(atBottom ? PRIMITIVE_TYPE_GEN : typeGen(maxDepth - 1, typeKindGen, sizeGen)).generate(rnd);
-                case TUPLE:
-                    return tupleTypeGen(atBottom ? PRIMITIVE_TYPE_GEN : typeGen(maxDepth - 1, typeKindGen, sizeGen), sizeGen).generate(rnd);
-                case UDT:
-                    return userTypeGen(atBottom ? PRIMITIVE_TYPE_GEN : typeGen(maxDepth - 1, typeKindGen, sizeGen), sizeGen).generate(rnd);
-                case COMPOSITE:
-                    return compositeTypeGen(atBottom ? PRIMITIVE_TYPE_GEN : typeGen(maxDepth - 1, typeKindGen, sizeGen), sizeGen).generate(rnd);
-                case DYNAMIC_COMPOSITE:
-                    Gen<Byte> aliasGen = Generators.letterOrDigit().map(c -> (byte) c.charValue());
-                    // stores alias names by class and not what is actually valid by cql... so only primitive types match!
-                    return dynamicCompositeGen(PRIMITIVE_TYPE_GEN, aliasGen, sizeGen).generate(rnd);
-                case COUNTER:
-                    return CounterColumnType.instance;
-                default:
-                    throw new IllegalArgumentException("Unknown kind: " + kind);
-            }
+            int dimension = dimensionGen.generate(rnd);
+            AbstractType<?> element = typeGen.generate(rnd);
+            // empty type not supported
+            while (element == EmptyType.instance)
+                element = typeGen.generate(rnd);
+            return VectorType.getInstance(element.freeze(), dimension);
         };
     }
 
@@ -288,11 +614,12 @@ public final class AbstractTypeGenerators
                 byte alias = aliasGen.generate(rnd);
                 while (aliases.containsKey(alias))
                     alias = aliasGen.generate(rnd);
-                aliases.put(alias, unfreeze(typeGen.generate(rnd)));
+                aliases.put(alias, typeGen.generate(rnd).unfreeze());
             }
             return DynamicCompositeType.getInstance(aliases);
         };
     }
+
     @SuppressWarnings("unused")
     public static Gen<SetType<?>> setTypeGen()
     {
@@ -301,7 +628,16 @@ public final class AbstractTypeGenerators
 
     public static Gen<SetType<?>> setTypeGen(Gen<AbstractType<?>> typeGen)
     {
-        return rnd -> SetType.getInstance(typeGen.generate(rnd), BOOLEAN_GEN.generate(rnd));
+        return setTypeGen(typeGen, BOOLEAN_GEN);
+    }
+
+    public static Gen<SetType<?>> setTypeGen(Gen<AbstractType<?>> typeGen, Gen<Boolean> multiCell)
+    {
+        return rnd -> {
+            boolean isMultiCell = multiCell.generate(rnd);
+            AbstractType<?> element = typeGen.generate(rnd);
+            return SetType.getInstance(element.freeze(), isMultiCell);
+        };
     }
 
     @SuppressWarnings("unused")
@@ -312,7 +648,16 @@ public final class AbstractTypeGenerators
 
     public static Gen<ListType<?>> listTypeGen(Gen<AbstractType<?>> typeGen)
     {
-        return rnd -> ListType.getInstance(typeGen.generate(rnd), BOOLEAN_GEN.generate(rnd));
+        return listTypeGen(typeGen, BOOLEAN_GEN);
+    }
+
+    public static Gen<ListType<?>> listTypeGen(Gen<AbstractType<?>> typeGen, Gen<Boolean> multiCell)
+    {
+        return rnd -> {
+            boolean isMultiCell = multiCell.generate(rnd);
+            AbstractType<?> element = typeGen.generate(rnd);
+            return ListType.getInstance(element.freeze(), isMultiCell);
+        };
     }
 
     @SuppressWarnings("unused")
@@ -321,14 +666,24 @@ public final class AbstractTypeGenerators
         return mapTypeGen(typeGen(2)); // lower the default depth since this is already a nested type
     }
 
-    public static Gen<MapType<?, ?>> mapTypeGen(Gen<? extends AbstractType<?>> typeGen)
+    public static Gen<MapType<?, ?>> mapTypeGen(Gen<AbstractType<?>> typeGen)
     {
         return mapTypeGen(typeGen, typeGen);
     }
 
-    public static Gen<MapType<?, ?>> mapTypeGen(Gen<? extends AbstractType<?>> keyGen, Gen<? extends AbstractType<?>> valueGen)
+    public static Gen<MapType<?, ?>> mapTypeGen(Gen<AbstractType<?>> keyGen, Gen<AbstractType<?>> valueGen)
     {
-        return rnd -> MapType.getInstance(keyGen.generate(rnd), valueGen.generate(rnd), BOOLEAN_GEN.generate(rnd));
+        return mapTypeGen(keyGen, valueGen, BOOLEAN_GEN);
+    }
+
+    public static Gen<MapType<?, ?>> mapTypeGen(Gen<AbstractType<?>> keyGen, Gen<AbstractType<?>> valueGen, Gen<Boolean> multiCell)
+    {
+        return rnd -> {
+            boolean isMultiCell = multiCell.generate(rnd);
+            AbstractType<?> key = keyGen.generate(rnd);
+            AbstractType<?> value = valueGen.generate(rnd);
+            return MapType.getInstance(key.freeze(), value.freeze(), isMultiCell);
+        };
     }
 
     public static Gen<TupleType> tupleTypeGen()
@@ -364,23 +719,46 @@ public final class AbstractTypeGenerators
 
     public static Gen<UserType> userTypeGen(Gen<AbstractType<?>> elementGen, Gen<Integer> sizeGen)
     {
+        return userTypeGen(elementGen, sizeGen, IDENTIFIER_GEN);
+    }
+
+    public static Gen<UserType> userTypeGen(Gen<AbstractType<?>> elementGen, Gen<Integer> sizeGen, Gen<String> ksGen)
+    {
+        return userTypeGen(elementGen, sizeGen, ksGen, IDENTIFIER_GEN);
+    }
+
+    public static Gen<UserType> userTypeGen(Gen<AbstractType<?>> elementGen, Gen<Integer> sizeGen, Gen<String> ksGen, Gen<String> nameGen)
+    {
+        return userTypeGen(elementGen, sizeGen, ksGen, nameGen, BOOLEAN_GEN);
+    }
+
+    public static Gen<UserType> userTypeGen(Gen<AbstractType<?>> elementGen, Gen<Integer> sizeGen, Gen<String> ksGen, Gen<String> nameGen, Gen<Boolean> multiCellGen)
+    {
         Gen<FieldIdentifier> fieldNameGen = IDENTIFIER_GEN.map(FieldIdentifier::forQuoted);
         return rnd -> {
-            boolean multiCell = BOOLEAN_GEN.generate(rnd);
+            boolean multiCell = multiCellGen.generate(rnd);
             int numElements = sizeGen.generate(rnd);
             List<AbstractType<?>> fieldTypes = new ArrayList<>(numElements);
             LinkedHashSet<FieldIdentifier> fieldNames = new LinkedHashSet<>(numElements);
-            String ks = IDENTIFIER_GEN.generate(rnd);
-            ByteBuffer name = AsciiType.instance.decompose(IDENTIFIER_GEN.generate(rnd));
+            String ks = ksGen.generate(rnd);
+            String name = nameGen.generate(rnd);
+            ByteBuffer nameBB = AsciiType.instance.decompose(name);
 
-            Gen<FieldIdentifier> distinctNameGen = Generators.filter(fieldNameGen, 30, e -> !fieldNames.contains(e));
+            Gen<FieldIdentifier> distinctNameGen = filter(fieldNameGen, 30, e -> !fieldNames.contains(e));
             // UDTs don't allow duplicate names, so make sure all names are unique
             for (int i = 0; i < numElements; i++)
             {
-                fieldTypes.add(elementGen.generate(rnd));
-                fieldNames.add(distinctNameGen.generate(rnd));
+                FieldIdentifier fieldName = distinctNameGen.generate(rnd);
+                fieldNames.add(fieldName);
+
+                AbstractType<?> element = elementGen.generate(rnd);
+                element = multiCell ? element.freeze() : element.unfreeze();
+                // a UDT cannot contain a non-frozen UDT; as defined by CreateType
+                if (element.isUDT())
+                    element = element.freeze();
+                fieldTypes.add(element);
             }
-            return new UserType(ks, name, new ArrayList<>(fieldNames), fieldTypes, multiCell);
+            return new UserType(ks, nameBB, new ArrayList<>(fieldNames), fieldTypes, multiCell);
         };
     }
 
@@ -397,8 +775,12 @@ public final class AbstractTypeGenerators
         return getTypeSupport(type, VERY_SMALL_POSITIVE_SIZE_GEN);
     }
 
-    public enum ValueDomain
-    {NULL, EMPTY_BYTES, NORMAL}
+    public enum ValueDomain { NULL, EMPTY_BYTES, NORMAL }
+
+    public static <T> TypeSupport<T> getTypeSupportWithNulls(AbstractType<T> type, @Nullable Gen<ValueDomain> valueDomainGen)
+    {
+        return getTypeSupport(type, VERY_SMALL_POSITIVE_SIZE_GEN, valueDomainGen);
+    }
 
     public static <T> TypeSupport<T> getTypeSupport(AbstractType<T> type, Gen<Integer> sizeGen)
     {
@@ -412,7 +794,7 @@ public final class AbstractTypeGenerators
     {
         Objects.requireNonNull(sizeGen, "sizeGen");
         // this doesn't affect the data, only sort order, so drop it
-        type = unwrap(type);
+        type = type.unwrap();
         // cast is safe since type is a constant and was type cast while inserting into the map
         @SuppressWarnings("unchecked")
         TypeSupport<T> gen = (TypeSupport<T>) PRIMITIVE_TYPE_DATA_GENS.get(type);
@@ -427,6 +809,15 @@ public final class AbstractTypeGenerators
             // T = Set<A> so can not use T here
             SetType<Object> setType = (SetType<Object>) type;
             TypeSupport<Object> elementSupport = getTypeSupport(setType.getElementsType(), sizeGen, valueDomainGen);
+            Comparator<Object> elComparator = elementSupport.valueComparator;
+            Comparator<List<Object>> setComparator = listComparator(elComparator);
+            Comparator<Set<Object>> comparator = (Set<Object> a, Set<Object> b) -> {
+                List<Object> as = new ArrayList<>(a);
+                as.sort(elComparator);
+                List<Object> bs = new ArrayList<>(b);
+                bs.sort(elComparator);
+                return setComparator.compare(as, bs);
+            };
             support = (TypeSupport<T>) TypeSupport.of(setType, rnd -> {
                 int size = sizeGen.generate(rnd);
                 size = normalizeSizeFromType(elementSupport, size);
@@ -445,7 +836,7 @@ public final class AbstractTypeGenerators
                     set.add(generate);
                 }
                 return set;
-            });
+            }, comparator);
         }
         else if (type instanceof ListType)
         {
@@ -458,15 +849,35 @@ public final class AbstractTypeGenerators
                 for (int i = 0; i < size; i++)
                     list.add(elementSupport.valueGen.generate(rnd));
                 return list;
-            });
+            }, listComparator(elementSupport.valueComparator));
         }
         else if (type instanceof MapType)
         {
             // T = Map<A, B> so can not use T here
             MapType<Object, Object> mapType = (MapType<Object, Object>) type;
             // do not use valueDomainGen as map doesn't allow null/empty
-            TypeSupport<Object> keySupport = getTypeSupport(mapType.getKeysType(), sizeGen, valueDomainGen);
-            TypeSupport<Object> valueSupport = getTypeSupport(mapType.getValuesType(), sizeGen, valueDomainGen);
+            TypeSupport<Object> keySupport = getTypeSupport(mapType.getKeysType(), sizeGen, null);
+            Comparator<Object> keyType = keySupport.valueComparator;
+            TypeSupport<Object> valueSupport = getTypeSupport(mapType.getValuesType(), sizeGen, null);
+            Comparator<Object> valueType = valueSupport.valueComparator;
+            Comparator<Map<Object, Object>> comparator = (Map<Object, Object> a, Map<Object, Object> b) -> {
+                List<Object> ak = new ArrayList<>(a.keySet());
+                ak.sort(keyType);
+                List<Object> bk = new ArrayList<>(b.keySet());
+                bk.sort(keyType);
+                for (int i = 0, size = Math.min(ak.size(), bk.size()); i < size; i++)
+                {
+                    int rc = keyType.compare(ak.get(i), bk.get(i));
+                    if (rc != 0)
+                        return rc;
+                    // why can't we use the same key?  DecimalType uses BigDecimal.compareTo, which doesn't account for scale differences
+                    // so equality won't match, but comparator says they do!
+                    rc = valueType.compare(a.get(ak.get(i)), b.get(bk.get(i)));
+                    if (rc != 0)
+                        return rc;
+                }
+                return Integer.compare(a.size(), b.size());
+            };
             support = (TypeSupport<T>) TypeSupport.of(mapType, rnd -> {
                 int size = sizeGen.generate(rnd);
                 size = normalizeSizeFromType(keySupport, size);
@@ -485,19 +896,44 @@ public final class AbstractTypeGenerators
                     map.put(key, valueSupport.valueGen.generate(rnd));
                 }
                 return map;
-            });
+            }, comparator);
         }
         else if (type instanceof TupleType) // includes UserType
         {
             // T is ByteBuffer
             TupleType tupleType = (TupleType) type;
-            support = (TypeSupport<T>) TypeSupport.of(tupleType, new TupleGen(tupleType, sizeGen, valueDomainGen));
+            List<Comparator<Object>> columns = (List<Comparator<Object>>) (List<?>) tupleType.allTypes().stream().map(AbstractTypeGenerators::comparator).collect(Collectors.toList());
+            Comparator<List<Object>> listCompar = listComparator((i, a, b) -> columns.get(i).compare(a, b));
+            Comparator<ByteBuffer> comparator = (ByteBuffer a, ByteBuffer b) -> {
+                List<ByteBuffer> abb = tupleType.unpack(a);
+                List<Object> av = IntStream.range(0, abb.size()).mapToObj(i -> tupleType.type(i).compose(abb.get(i))).collect(Collectors.toList());
+
+                List<ByteBuffer> bbb = tupleType.unpack(b);
+                List<Object> bv = IntStream.range(0, bbb.size()).mapToObj(i -> tupleType.type(i).compose(bbb.get(i))).collect(Collectors.toList());
+                return listCompar.compare(av, bv);
+            };
+            support = (TypeSupport<T>) TypeSupport.of(tupleType, new TupleGen(tupleType, sizeGen, valueDomainGen), comparator);
+        }
+        else if (type instanceof VectorType)
+        {
+            VectorType<Object> vectorType = (VectorType<Object>) type;
+            TypeSupport<Object> elementSupport = getTypeSupport(vectorType.elementType, sizeGen, valueDomainGen);
+            support = (TypeSupport<T>) TypeSupport.of(vectorType, rnd -> {
+                List<Object> list = new ArrayList<>(vectorType.dimension);
+                for (int i = 0; i < vectorType.dimension; i++)
+                {
+                    Object generate = elementSupport.valueGen.generate(rnd);
+                    if (generate == null)
+                        throw new AssertionError(String.format("TypeSupport(%s) generated a null value", vectorType.elementType.asCQL3Type()));
+                    list.add(generate);
+                }
+                return list;
+            }, listComparator(elementSupport.valueComparator));
         }
         else if (type instanceof CompositeType)
         {
             CompositeType ct = (CompositeType) type;
             List<TypeSupport<Object>> elementSupport = (List<TypeSupport<Object>>) (List<?>) ct.types.stream().map(AbstractTypeGenerators::getTypeSupport).collect(Collectors.toList());
-            //noinspection Convert2Diamond
             Serde<ByteBuffer, List<Object>> serde = new Serde<ByteBuffer, List<Object>>()
             {
                 @Override
@@ -521,7 +957,7 @@ public final class AbstractTypeGenerators
                 for (int i = 0, size = ct.types.size(); i < size; i++)
                     values.add(elementSupport.get(i).valueGen.generate(rnd));
                 return values;
-            });
+            }, listComparator((index, a, b) -> elementSupport.get(index).valueComparator.compare(a, b)));
         }
         else if (type instanceof DynamicCompositeType)
         {
@@ -531,13 +967,12 @@ public final class AbstractTypeGenerators
             for (Map.Entry<Byte, AbstractType<?>> e : dct.aliases.entrySet())
                 supports.put(e.getKey(), getTypeSupport(e.getValue()));
             List<Byte> orderedAliases = new ArrayList<>(supports.keySet());
-            //noinspection Convert2Diamond
             Serde<ByteBuffer, Map<Byte, Object>> serde = new Serde<ByteBuffer, Map<Byte, Object>>()
             {
                 @Override
                 public ByteBuffer from(Map<Byte, Object> byteObjectMap)
                 {
-                    return new DynamicCompositeTypeValueBuilder(dct).build(byteObjectMap);
+                    return dct.build(byteObjectMap);
                 }
 
                 @Override
@@ -561,6 +996,18 @@ public final class AbstractTypeGenerators
                 for (Byte alias : orderedAliases)
                     byteObjectMap.put(alias, supports.get(alias).valueGen.generate(rnd));
                 return byteObjectMap;
+            }, (a, b) -> {
+                for (Byte alias : orderedAliases)
+                {
+                    @SuppressWarnings("rawtype")
+                    TypeSupport ts = supports.get(alias);
+                    Object as = a.get(alias);
+                    Object bs = b.get(alias);
+                    int rc = ts.valueComparator.compare(as, bs);
+                    if (rc != 0)
+                        return rc;
+                }
+                return 0;
             });
         }
         else if (type instanceof CounterColumnType)
@@ -574,9 +1021,36 @@ public final class AbstractTypeGenerators
         return support.withValueDomain(valueDomainGen);
     }
 
+    public static <T> Comparator<T> comparator(AbstractType<T> type)
+    {
+        return getTypeSupport(type).valueComparator;
+    }
+
+    private static <T> Comparator<List<T>> listComparator(Comparator<T> elements)
+    {
+        return listComparator((ignore, a, b) -> elements.compare(a, b));
+    }
+
+    private interface IndexComparator<T>
+    {
+        int compare(int index, T a, T b);
+    }
+    private static <T> Comparator<List<T>> listComparator(IndexComparator<T> ordering)
+    {
+        return (a, b) -> {
+            for (int i = 0, size = Math.min(a.size(), b.size()); i < size; i++)
+            {
+                int rc = ordering.compare(i, a.get(i), b.get(i));
+                if (rc != 0)
+                    return rc;
+            }
+            return Integer.compare(a.size(), b.size());
+        };
+    }
+
     private static int uniqueElementsForDomain(AbstractType<?> type)
     {
-        type = unwrap(type);
+        type = type.unwrap();
         if (type instanceof BooleanType)
             return 2;
         if (type instanceof EmptyType)
@@ -585,6 +1059,13 @@ public final class AbstractTypeGenerators
             return uniqueElementsForDomain(((SetType<?>) type).getElementsType());
         if (type instanceof MapType)
             return uniqueElementsForDomain(((MapType<?, ?>) type).getKeysType());
+        if (type instanceof VectorType)
+        {
+            VectorType<?> vector = (VectorType<?>) type;
+            int uniq = uniqueElementsForDomain(vector.elementType);
+            if (uniq != -1)
+                return uniq == 1 ? 1 : uniq * vector.dimension;
+        }
         if (type instanceof TupleType || type instanceof CompositeType || type instanceof DynamicCompositeType)
         {
             int product = 1;
@@ -606,6 +1087,23 @@ public final class AbstractTypeGenerators
         if (uniq == -1)
             return size;
         return Math.min(size, uniq);
+    }
+
+    public static Set<UserType> extractUDTs(AbstractType<?> type)
+    {
+        Set<UserType> matches = new HashSet<>();
+        extractUDTs(type, matches);
+        return matches;
+    }
+
+    public static void extractUDTs(AbstractType<?> type, Set<UserType> matches)
+    {
+        if (type instanceof ReversedType)
+            type = ((ReversedType) type).baseType;
+        if (type instanceof UserType)
+            matches.add((UserType) type);
+        for (AbstractType<?> t : type.subTypes())
+            extractUDTs(t, matches);
     }
 
     public static String typeTree(AbstractType<?> type)
@@ -655,6 +1153,18 @@ public final class AbstractTypeGenerators
                 sb.append(i).append(": ");
                 typeTree(sb, fieldType, elementIndent);
             }
+        }
+        else if (type.isVector())
+        {
+            if (indent != 0)
+            {
+                indent += 2;
+                newline(sb, indent);
+            }
+            VectorType<?> vt = (VectorType<?>) type;
+            sb.append("vector[").append(vt.dimension).append("]: ");
+            indent += 2;
+            typeTree(sb, vt.elementType, indent);
         }
         else if (type.isCollection())
         {
@@ -736,22 +1246,25 @@ public final class AbstractTypeGenerators
     {
         private final List<TypeSupport<Object>> elementsSupport;
 
+        private final TupleType type;
+
         @SuppressWarnings("unchecked")
         private TupleGen(TupleType tupleType, Gen<Integer> sizeGen, @Nullable Gen<ValueDomain> valueDomainGen)
         {
             this.elementsSupport = tupleType.allTypes().stream().map(t -> getTypeSupport((AbstractType<Object>) t, sizeGen, valueDomainGen)).collect(Collectors.toList());
+            this.type = tupleType;
         }
 
         public ByteBuffer generate(RandomnessSource rnd)
         {
             List<TypeSupport<Object>> eSupport = this.elementsSupport;
-            ByteBuffer[] elements = new ByteBuffer[eSupport.size()];
+            List<ByteBuffer> elements = new ArrayList<>(eSupport.size());
             for (int i = 0; i < eSupport.size(); i++)
             {
                 TypeSupport<Object> support = eSupport.get(i);
-                elements[i] = support.type.decompose(support.valueGen.generate(rnd));
+                elements.add(support.type.decompose(support.valueGen.generate(rnd)));
             }
-            return TupleType.buildValue(elements);
+            return type.pack(elements);
         }
     }
 
@@ -769,29 +1282,37 @@ public final class AbstractTypeGenerators
         public final AbstractType<T> type;
         public final Gen<T> valueGen;
         private final Gen<ByteBuffer> bytesGen;
+        public final Comparator<T> valueComparator;
 
-        private TypeSupport(AbstractType<T> type, Gen<T> valueGen)
+        private TypeSupport(AbstractType<T> type, Gen<T> valueGen, Comparator<T> valueComparator)
         {
             this.type = Objects.requireNonNull(type);
             this.valueGen = Objects.requireNonNull(valueGen);
             this.bytesGen = rnd -> type.decompose(valueGen.generate(rnd));
+            this.valueComparator = Objects.requireNonNull(valueComparator);
         }
 
-        private TypeSupport(AbstractType<T> type, Gen<T> valueGen, Gen<ByteBuffer> bytesGen)
+        private TypeSupport(AbstractType<T> type, Gen<T> valueGen, Gen<ByteBuffer> bytesGen, Comparator<T> valueComparator)
         {
             this.type = type;
             this.valueGen = valueGen;
             this.bytesGen = bytesGen;
+            this.valueComparator = valueComparator;
         }
 
-        public static <T> TypeSupport<T> of(AbstractType<T> type, Gen<T> valueGen)
+        public static <T extends Comparable<T>> TypeSupport<T> of(AbstractType<T> type, Gen<T> valueGen)
         {
-            return new TypeSupport<>(type, valueGen);
+            return new TypeSupport<>(type, valueGen, Comparator.naturalOrder());
         }
 
-        public static <A, B> TypeSupport<A> of(AbstractType<A> type, Serde<A, B> serde, Gen<B> valueGen)
+        public static <T> TypeSupport<T> of(AbstractType<T> type, Gen<T> valueGen, Comparator<T> valueComparator)
         {
-            return of(type, valueGen.map(serde::from));
+            return new TypeSupport<>(type, valueGen, valueComparator);
+        }
+
+        public static <A, B> TypeSupport<A> of(AbstractType<A> type, Serde<A, B> serde, Gen<B> valueGen, Comparator<B> valueComparator)
+        {
+            return of(type, valueGen.map(serde::from), (a, b) -> valueComparator.compare(serde.to(a), serde.to(b)));
         }
 
         /**
@@ -802,9 +1323,21 @@ public final class AbstractTypeGenerators
             return bytesGen;
         }
 
+        public TypeSupport<T> mapBytes(Function<ByteBuffer, ByteBuffer> fn)
+        {
+            return new TypeSupport<>(type, valueGen, bytesGen.map(fn), valueComparator);
+        }
+
+        public TypeSupport<T> withoutEmptyData()
+        {
+            if (!type.allowsEmpty())
+                return this;
+            return new TypeSupport<>(type, valueGen, filter(bytesGen, b -> !ByteBufferAccessor.instance.isEmpty(b)), valueComparator);
+        }
+
         public TypeSupport<T> withValueDomain(@Nullable Gen<ValueDomain> valueDomainGen)
         {
-            if (valueDomainGen == null || !allowsEmpty(type))
+            if (valueDomainGen == null || !type.allowsEmpty())
                 return this;
             Gen<ByteBuffer> gen = rnd -> {
                 ValueDomain domain = valueDomainGen.generate(rnd);
@@ -825,7 +1358,7 @@ public final class AbstractTypeGenerators
                 }
                 return value;
             };
-            return new TypeSupport<>(type, valueGen, gen);
+            return new TypeSupport<>(type, valueGen, gen, valueComparator);
         }
 
         public String toString()
@@ -868,103 +1401,6 @@ public final class AbstractTypeGenerators
         return t;
     }
 
-    private static class DynamicCompositeTypeValueBuilder
-    {
-        private final Map<Byte, AbstractType<?>> aliases;
-
-        public DynamicCompositeTypeValueBuilder(DynamicCompositeType dct)
-        {
-            this.aliases = dct.aliases;
-        }
-
-        public ByteBuffer build(Map<Byte, Object> valuesMap)
-        {
-            Sets.SetView<Byte> unknownAliases = Sets.difference(valuesMap.keySet(), aliases.keySet());
-            if (!unknownAliases.isEmpty())
-                throw new IllegalArgumentException(String.format("Aliases %s used; only valid values are %s", unknownAliases, aliases.keySet()));
-            List<AbstractType<?>> types = new ArrayList<>(valuesMap.size());
-            List<ByteBuffer> values = new ArrayList<>(valuesMap.size());
-            List<Byte> aliasesList = new ArrayList<>(valuesMap.size());
-            for (Map.Entry<Byte, Object> e : valuesMap.entrySet())
-            {
-                @SuppressWarnings("rawtype")
-                AbstractType type = aliases.get(e.getKey());
-                types.add(type);
-                values.add(type.decompose(e.getValue()));
-                aliasesList.add(e.getKey());
-            }
-            return build(ByteBufferAccessor.instance, types, values, aliasesList, (byte) 0);
-        }
-
-        @VisibleForTesting
-        public static <V> V build(ValueAccessor<V> accessor,
-                                  List<AbstractType<?>> types,
-                                  List<V> values,
-                                  List<Byte> aliasesList,
-                                  byte lastEoc)
-        {
-            assert types.size() == values.size();
-
-            int numComponents = types.size();
-            // Compute the total number of bytes that we'll need to store the types and their payloads.
-            int totalLength = 0;
-            for (int i = 0; i < numComponents; ++i)
-            {
-                AbstractType<?> type = types.get(i);
-                Byte alias = aliasesList.get(i);
-                int typeNameLength = alias == null ? type.toString().getBytes(StandardCharsets.UTF_8).length : 0;
-                // The type data will be stored by means of the type's fully qualified name, not by aliasing, so:
-                //   1. The type data header should be the fully qualified name length in bytes.
-                //   2. The length should be small enough so that it fits in 15 bits (2 bytes with the first bit zero).
-                assert typeNameLength <= 0x7FFF;
-                int valueLength = accessor.size(values.get(i));
-                // The value length should also expect its first bit to be 0, as the length should be stored as a signed
-                // 2-byte value (short).
-                assert valueLength <= 0x7FFF;
-                totalLength += 2 + typeNameLength + 2 + valueLength + 1;
-            }
-
-            V result = accessor.allocate(totalLength);
-            int offset = 0;
-            for (int i = 0; i < numComponents; ++i)
-            {
-                AbstractType<?> type = types.get(i);
-                Byte alias = aliasesList.get(i);
-                if (alias == null)
-                {
-                    // Write the type data (2-byte length header + the fully qualified type name in UTF-8).
-                    byte[] typeNameBytes = type.toString().getBytes(StandardCharsets.UTF_8);
-                    accessor.putShort(result,
-                                      offset,
-                                      (short) typeNameBytes.length); // this should work fine also if length >= 32768
-                    offset += 2;
-                    accessor.copyByteArrayTo(typeNameBytes, 0, result, offset, typeNameBytes.length);
-                    offset += typeNameBytes.length;
-                }
-                else
-                {
-                    accessor.putShort(result, offset, (short) (alias | 0x8000));
-                    offset += 2;
-                }
-
-                // Write the type payload data (2-byte length header + the payload).
-                V value = values.get(i);
-                int bytesToCopy = accessor.size(value);
-                if ((short) bytesToCopy != bytesToCopy)
-                    throw new IllegalArgumentException(String.format("Value of type %s is of length %d; does not fit in a short", type.asCQL3Type(), bytesToCopy));
-                accessor.putShort(result, offset, (short) bytesToCopy);
-                offset += 2;
-                accessor.copyTo(value, 0, result, accessor, offset, bytesToCopy);
-                offset += bytesToCopy;
-
-                // Write the end-of-component byte.
-                accessor.putByte(result, offset, i != numComponents - 1 ? (byte) 0 : lastEoc);
-                offset += 1;
-            }
-            return result;
-        }
-    }
-
     public static void forEachTypesPair(boolean withVariants, BiConsumer<AbstractType, AbstractType> typesPairConsumer)
     {
         forEachPrimitiveTypePair(typesPairConsumer);
@@ -973,6 +1409,7 @@ public final class AbstractTypeGenerators
         forEachListTypesPair(withVariants, typesPairConsumer);
         forEachUserTypesPair(withVariants, typesPairConsumer);
         forEachCompositeTypesPair(withVariants, typesPairConsumer);
+        forEachVectorTypesPair(withVariants, typesPairConsumer);
     }
 
     public static void forEachPrimitiveTypePair(BiConsumer<AbstractType, AbstractType> typePairConsumer)
@@ -1030,6 +1467,19 @@ public final class AbstractTypeGenerators
         forEachTypesPair(compositeTypeVariants(leftType), compositeTypeVariants(rightType), typePairConsumer);
     }
 
+    public static void forEachVectorTypesPair(boolean withVariants, BiConsumer<? super VectorType, ? super VectorType> typePairConsumer)
+    {
+        logger.info("Iterating over vector types pairs...");
+        primitiveTypePairs().forEach(keyPair -> {
+            VectorType<?> leftVector = VectorType.getInstance(keyPair.left, 1);
+            VectorType<?> rightVector = VectorType.getInstance(keyPair.right, 1);
+            if (withVariants)
+                forEachTypesPair(frozenAndUnfrozen(leftVector, VectorType.getInstance(keyPair.left, 2)), frozenAndUnfrozen(rightVector, VectorType.getInstance(keyPair.right, 2)), typePairConsumer);
+            else
+                typePairConsumer.accept(leftVector, rightVector);
+        });
+    }
+
     public static void forEachMapTypesPair(boolean withVariants, BiConsumer<? super MapType, ? super MapType> typePairConsumer)
     {
         logger.info("Iterating over map types pairs...");
@@ -1077,12 +1527,12 @@ public final class AbstractTypeGenerators
 
         String ks = "ks";
         ByteBuffer t = ByteBufferUtil.bytes("t");
-        List<FieldIdentifier> names = Stream.of("a", "b").map(FieldIdentifier::forUnquoted).collect(Collectors3.toImmutableList());
+        List<FieldIdentifier> names = Stream.of("a", "b").map(FieldIdentifier::forUnquoted).collect(Collectors.toUnmodifiableList());
 
         primitiveTypePairs().forEach(elem1Pair -> {
             primitiveTypePairs().forEach(elem2Pair -> {
-                UserType leftType = new UserType(ks, t, names, ImmutableList.of(elem1Pair.left, elem2Pair.left), true);
-                UserType rightType = new UserType(ks, t, names, ImmutableList.of(elem1Pair.right, elem2Pair.right), true);
+                UserType leftType = new UserType(ks, t, names, List.of(elem1Pair.left, elem2Pair.left), true);
+                UserType rightType = new UserType(ks, t, names, List.of(elem1Pair.right, elem2Pair.right), true);
                 if (withVariants)
                     forEachUserTypeVariantPair(leftType, rightType, typePairConsumer);
                 else
@@ -1096,8 +1546,8 @@ public final class AbstractTypeGenerators
         logger.info("Iterating over composite types pairs...");
         primitiveTypePairs().forEach(elem1Pair -> {
             primitiveTypePairs().forEach(elem2Pair -> {
-                DynamicCompositeType leftType = DynamicCompositeType.getInstance(ImmutableMap.of((byte) 'a', elem1Pair.left, (byte) 'b', elem2Pair.left));
-                DynamicCompositeType rightType = DynamicCompositeType.getInstance(ImmutableMap.of((byte) 'a', elem1Pair.right, (byte) 'b', elem2Pair.right));
+                DynamicCompositeType leftType = DynamicCompositeType.getInstance(Map.of((byte) 'a', elem1Pair.left, (byte) 'b', elem2Pair.left));
+                DynamicCompositeType rightType = DynamicCompositeType.getInstance(Map.of((byte) 'a', elem1Pair.right, (byte) 'b', elem2Pair.right));
                 if (withVariants)
                     forEachCompositeTypeVariantsPair(leftType, rightType, typePairConsumer);
                 else
